my second Commit

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
             </div>
         </div>
     </section>
+    <section id="footer">
+        <div>
+            <h1 style="padding: 64px; color: rgb(255, 255, 255);">I Need Support</h1>
+            <P style="color: rgb(255, 255, 255);">Ask me any question or give any opinion regarding me. </P>
+            <div class="feedback">
+                <input type="text" id="fname" name="fname" placeholder="Suggest any feedback for me"><br><br>
+                <button>Submit</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
