--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
             <p class="describtion">
                 To leverage my passion for Technological field, coupled with my dedication, hardworking nature, and rapid learning abilities, to excel in the field and contribute to innovative technological advancements..
             </p>
-            <div class="btn-container">            
-                <button class="btn">Contact</button>
+            <div class="btn-container"> 
+                <a href='#footer'> 
+                    <button class="btn"> 
+                        Contact 
+                    </button> 
+                </a> 
+                
             </div>
         </div>
     </section>
